Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Agronomos__c.field-meta.xml
<CustomField>
    <fullName>Agronomos__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Agrônomo (equipe comercial)</description>
    <inlineHelpText>Agrônomo (equipe comercial)</inlineHelpText>
    <label>Agrônomos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>