Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Area_multiplic_propia__c.field-meta.xml
<CustomField>
    <fullName>Area_multiplic_propia__c</fullName>
    <description>Multiplicação própria área(%)</description>
    <inlineHelpText>Multiplicação própria área(%)</inlineHelpText>
    <label>Área multiplicação propia</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>