Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/area_multiplic_terceirizada__c.field-meta.xml
<CustomField>
    <fullName>area_multiplic_terceirizada__c</fullName>
    <description>Área multiplicação terceirizada(%)</description>
    <inlineHelpText>Área multiplicação terceirizada(%)</inlineHelpText>
    <label>Área multiplicação terceirizada</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>