Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Categoria_resultante__c.field-meta.xml
<CustomField>
    <fullName>BR_Categoria_resultante__c</fullName>
    <formula>IF(BR_Total_de_pontos__c &gt;= 16, IF(BR_Total_de_pontos__c &lt; 21, &apos;PRATA&apos;, IF(BR_Total_de_pontos__c &lt; 24, &apos;OURO&apos;, &apos;DIAMANTE&apos;)), &apos;-&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria de cliente BRMX</label>
    <type>Text</type>
</CustomField>