Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Catergoria_BRXM__c.field-meta.xml
<CustomField>
    <fullName>BR_Catergoria_BRXM__c</fullName>
    <description>Porcentaje que corresponde según Categoria</description>
    <formula>IF(AND(BR_Superou_Meta__c =true, BR_Pontos_LxL__c &gt; 0, BR_Pontos_dias_de_campo__c &gt; 0, BR_Resultado_Palestra_e_Treinamentos__c &gt; 0, BR_Total_de_pontos__c&gt;17), 
IF(CONTAINS(Region_Comercial_Copia__c,&quot;REGION&quot;), 
IF(BR_Total_de_pontos__c&gt;=31 , 2/13, 1/13) 
, 
IF(BR_Total_de_pontos__c&gt;=31 , 2/14, 1/14))
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Porcentaje que corresponde según Categoria</inlineHelpText>
    <label>%Desconto BRMX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>