Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Desconto_CRM_Estim__c.field-meta.xml
<CustomField>
    <fullName>BR_Desconto_CRM_Estim__c</fullName>
    <formula>IF(OR(CRM_BRMX__c = true, BR_Estim_Cumple_CRM__c = true), IF(CONTAINS(Region_Comercial_Copia__c,&quot;REGION&quot;), 3.125, 2.94), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDesconto CRM Estim</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>