Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Desconto_Exclusividade__c.field-meta.xml
<CustomField>
    <fullName>BR_Desconto_Exclusividade__c</fullName>
    <description>Desconto Exclusividade (kgs) del excel Fórmula Desconto de Royalty</description>
    <formula>IF(BR_Exclusividade_GDM__c = true, 0.5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Desconto Exclusividade (kgs) del excel Fórmula Desconto de Royalty</inlineHelpText>
    <label>BDesconto Exclusividade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>