Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Emplacamentos_Meta__c.field-meta.xml
<CustomField>
    <fullName>BR_Emplacamentos_Meta__c</fullName>
    <label>Meta Emplacamentos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>