Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Estim_Cumple_Stock_Mult__c.field-meta.xml
<CustomField>
    <fullName>BR_Estim_Cumple_Stock_Mult__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estim Cumple Stock Mult</label>
    <type>Checkbox</type>
</CustomField>