Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Exclusividade_GDM__c.field-meta.xml
<CustomField>
    <fullName>BR_Exclusividade_GDM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>marcado = exclusivo
no marcado = não exclusivo</description>
    <inlineHelpText>marcado = exclusivo
no marcado = não exclusivo</inlineHelpText>
    <label>Exclusivo</label>
    <type>Checkbox</type>
</CustomField>