Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Identifica_o_de_beiras_de_rodovia__c.field-meta.xml
<CustomField>
    <fullName>BR_Identifica_o_de_beiras_de_rodovia__c</fullName>
    <label>Quant de Identificação das Cultivar</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>