Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Meta_BRMX_porc__c.field-meta.xml
<CustomField>
    <fullName>BR_Meta_BRMX_porc__c</fullName>
    <formula>IF(BR_Soma_de_Meta__c != 0, BR_SemComer_Safra_actual__c / BR_Soma_de_Meta__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meta % BRMX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>