Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Mix_de_Produto_Estim__c.field-meta.xml
<CustomField>
    <fullName>BR_Mix_de_Produto_Estim__c</fullName>
    <label>% Produto mais comercializado Estim</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>