Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Palestras_Meta__c.field-meta.xml
<CustomField>
    <fullName>BR_Palestras_Meta__c</fullName>
    <label>Meta Palestra</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>