Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Pontos_LxL__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_LxL__c</fullName>
    <description>Pontos (LxL) del excel Fórmulas Desconto de Royalty</description>
    <formula>IF(BR_LXL_Realizado__c - BR_LXL_Meta__c &gt;=0, IF(CONTAINS(Region_Comercial_Copia__c,&quot;REGION&quot;), 6.25, 5.88), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pontos (LxL) del excel Fórmulas Desconto de Royalty</inlineHelpText>
    <label>Pontos LxL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>