Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Pontos_LxL_Estim__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_LxL_Estim__c</fullName>
    <formula>IF(OR(BR_LXL_Realizado__c - BR_LXL_Meta__c &gt;=0, BR_Estim_Cumple_LxL__c = true), IF(CONTAINS(Region_Comercial_Copia__c,&quot;REGION&quot;), 6.25, 5.88), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontos LxL Estim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>