Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Pontos_mix__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_mix__c</fullName>
    <formula>IF(AND(BR_Mix_de_Produto__c&lt;=0.40,BR_Mix_de_Produto__c&gt;0), 2, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontos Mix de produtos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>