Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Pontos_palestras__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_palestras__c</fullName>
    <description>Pontos (palestras) excel Fórmula Desconto de Royalty</description>
    <formula>IF( BR_Palestras_Realizado__c - BR_Palestras_Meta__c &gt;=0,3, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pontos (palestras) excel Fórmula Desconto de Royalty</inlineHelpText>
    <label>BPontos (palestras)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>