Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Pontos_penetra_o__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_penetra_o__c</fullName>
    <description>Pontos (penetração) excel Fórmulas Desconto de Royalty</description>
    <formula>2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pontos (penetração) excel Fórmulas Desconto de Royalty</inlineHelpText>
    <label>Pontos Penetração Tencologia IPRO BRMX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>