Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Pontos_penetra_o_Estim__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_penetra_o_Estim__c</fullName>
    <formula>IF(BR_Penetra_o_INTACTA_Estim__c&gt;0.60, 2, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontos Penetração Tec IPRO BRMX Estim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>