Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Pontos_Stock_Mult__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_Stock_Mult__c</fullName>
    <formula>IF(BR_Stock_Mult_Realizado__c &gt;= 8, IF(CONTAINS(Region_Comercial_Copia__c,&quot;REGION&quot;), 3.125, 2.94), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontos Stock Mult</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>