Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Pontos_Stock_Mult_Estim__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_Stock_Mult_Estim__c</fullName>
    <formula>IF(OR((BR_Stock_Mult_Realizado__c - (MONTH(TODAY()) - IF(DAY(TODAY()) &gt; 5, 3, 4))) &gt;= 0, BR_Estim_Cumple_Stock_Mult__c = true), IF(CONTAINS(Region_Comercial_Copia__c,&quot;REGION&quot;), 3.125, 2.94), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontos Stock Mult Estim</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>