Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Pontos_volume_2__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_volume_2__c</fullName>
    <description>Pontos (volume) del excel Fórmula desconto de Royalty</description>
    <inlineHelpText>Pontos (volume) del excel Fórmula desconto de Royalty</inlineHelpText>
    <label>Pontos Vendas BRMX 2</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>