Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Pontos_volume_Estim__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_volume_Estim__c</fullName>
    <label>Pontos Vendas BRMX Estim</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>