Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Resultado_Palestra_e_Trein_Estim__c.field-meta.xml
<CustomField>
    <fullName>BR_Resultado_Palestra_e_Trein_Estim__c</fullName>
    <formula>IF(OR(AND(BR_Palestras_Realizado__c&gt;= BR_Palestras_Meta__c, BR_Treinamentos_Realizado__c &gt;= BR_Treinamentos_Meta__c), BR_Estim_Cumple_Palestras_Treinamentos__c = true), IF(CONTAINS(Region_Comercial_Copia__c,&quot;REGION&quot;), 3.125, 2.94), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontos Palestras e Treinamentos Estim</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>