Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Resultado_Palestra_e_Treinamentos__c.field-meta.xml
<CustomField>
    <fullName>BR_Resultado_Palestra_e_Treinamentos__c</fullName>
    <description>Si cumplió con las Palestras y con los Treinamento, suma 3 ptos sino 0</description>
    <formula>IF(AND(BR_Palestras_Realizado__c&gt;= BR_Palestras_Meta__c, BR_Treinamentos_Realizado__c &gt;= BR_Treinamentos_Meta__c), IF(CONTAINS(Region_Comercial_Copia__c,&quot;REGION&quot;), 3.125, 2.94), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Si cumplió con las Palestras y con los Treinamento, suma 3 ptos sino 0</inlineHelpText>
    <label>Pontos Palestras e Treinamentos</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>