Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Resultado_Vendas__c.field-meta.xml
<CustomField>
    <fullName>BR_Resultado_Vendas__c</fullName>
    <formula>IF( BR_SemComer_Safra_actual__c &gt;=40000, IF(BR_SemComer_Safra_actual__c &gt;70000, IF(BR_SemComer_Safra_actual__c &lt;=150000, 6, IF(BR_SemComer_Safra_actual__c &lt;=250000, 12, 16) ) , 3) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BResultado Vendas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>