Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_SemComer_Safra_actual_Estim__c.field-meta.xml
<CustomField>
    <fullName>BR_SemComer_Safra_actual_Estim__c</fullName>
    <label>Vendas BRMX Estim</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>