Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Soma_de_Sem_Comercializada_Estim__c.field-meta.xml
<CustomField>
    <fullName>BR_Soma_de_Sem_Comercializada_Estim__c</fullName>
    <label>Vendas BRMX IPRO Estim</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>