Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Stock_Mult_Realizado__c.field-meta.xml
<CustomField>
    <fullName>BR_Stock_Mult_Realizado__c</fullName>
    <label>Realizado Stock Mult</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>