Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Total_de_pontos__c.field-meta.xml
<CustomField>
    <fullName>BR_Total_de_pontos__c</fullName>
    <formula>BR_Pontos_volume_2__c + BR_Pontos_penetra_o__c + Pontos_Porc_Vendas__c + BR_Pontos_mix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>18 a 30 Prata
31 a 38 Ouro</inlineHelpText>
    <label>Total de Pontos BRMX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>