Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BR_Total_de_pontos_Estim__c.field-meta.xml
<CustomField>
    <fullName>BR_Total_de_pontos_Estim__c</fullName>
    <formula>BR_Pontos_volume_Estim__c + BR_Pontos_penetra_o_Estim__c + Pontos_Porc_Vendas_Estim__c + BR_Pontos_mix_Estim__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Pontos BRMX Estim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>