Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BRMX_Desconto_Classe_2__c.field-meta.xml
<CustomField>
    <fullName>BRMX_Desconto_Classe_2__c</fullName>
    <formula>IF(CONTAINS(Region_Comercial_Copia__c,&quot;REGION&quot;),
IF(BRMX_Desconto_Obj_Gen_Dem__c &gt;= 12.49,
IF(BR_Total_de_pontos__c &gt; 23 , 19.23, IF(BR_Total_de_pontos__c &gt;= 21, 15.38, IF(BR_Total_de_pontos__c &gt;= 16, 7.69, 0))), 0),
IF(BRMX_Desconto_Obj_Gen_Dem__c &gt;= 11.76,
IF(BR_Total_de_pontos__c &gt; 23, 14.28, IF(BR_Total_de_pontos__c &gt;= 21, 7.14, IF(BR_Total_de_pontos__c &gt;= 16, 3.57, 0))), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BRMX Desconto Classe 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>