Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BRMX_Desconto_Classe_3_Estim__c.field-meta.xml
<CustomField>
    <fullName>BRMX_Desconto_Classe_3_Estim__c</fullName>
    <formula>IF(CONTAINS(Region_Comercial_Copia__c,&quot;REGION&quot;),
IF(BR_Total_de_pontos_Estim__c &gt; 23 , 18.75, IF(BR_Total_de_pontos_Estim__c &gt;= 21, 12.50, IF(BR_Total_de_pontos_Estim__c &gt;= 16, 6.25, 0))),
IF(BR_Total_de_pontos_Estim__c &gt; 23 , 17.64, IF(BR_Total_de_pontos_Estim__c &gt;= 21, 11.76, IF(BR_Total_de_pontos_Estim__c &gt;= 16, 5.88, 0))))
+ BRMX_Desconto_Obj_Rel_Gen_Dem_Est_Copia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BRMX Desconto Classe 3 Estim</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>