Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BRMX_Desconto_Obj_Gen_Dem_Estim__c.field-meta.xml
<CustomField>
    <fullName>BRMX_Desconto_Obj_Gen_Dem_Estim__c</fullName>
    <label>BRMX Desconto Obj Gen Dem Estim</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>