Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BRMX_Desconto_Obj_Rel_Gen_Dem__c.field-meta.xml
<CustomField>
    <fullName>BRMX_Desconto_Obj_Rel_Gen_Dem__c</fullName>
    <formula>BR_Pontos_LxL__c + BR_Resultado_Palestra_e_Treinamentos__c + BR_Pontos_Emplacamentos__c + BR_Desconto_CRM__c + BR_Pontos_Stock_Mult__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BRMX Desconto Obj Rel/Gen Dem</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>