Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BRMX_Desconto_Obj_Rel_Gen_Dem_Copia__c.field-meta.xml
<CustomField>
    <fullName>BRMX_Desconto_Obj_Rel_Gen_Dem_Copia__c</fullName>
    <label>BRMX Desconto Obj Rel/Gen Dem Copia</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>