Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/BRMX_Desconto_Obj_Rel_Gen_Dem_Estim__c.field-meta.xml
<CustomField>
    <fullName>BRMX_Desconto_Obj_Rel_Gen_Dem_Estim__c</fullName>
    <formula>BR_Pontos_LxL_Estim__c + BR_Resultado_Palestra_e_Trein_Estim__c + BR_Pontos_Emplacamentos_Estim__c + BR_Desconto_CRM_Estim__c + BR_Pontos_Stock_Mult_Estim__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BRMX Desconto Obj Rel/Gen Dem Estim</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>