Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Capacidade_Exp_Amp__c.field-meta.xml
<CustomField>
    <fullName>Capacidade_Exp_Amp__c</fullName>
    <description>Suma de la capacidad de Expanción Ampliación.</description>
    <label>Capacidade Exp/Amp</label>
    <summarizedField>CRM_Infraestructura__c.Capacidade__c</summarizedField>
    <summaryFilterItems>
        <field>CRM_Infraestructura__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>G</value>
    </summaryFilterItems>
    <summaryForeignKey>CRM_Infraestructura__c.CRM_Multiplicador__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>