Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Capacidade_x_cidade__c.field-meta.xml
<CustomField>
    <fullName>Capacidade_x_cidade__c</fullName>
    <label>Capacidade x cidade</label>
    <summarizedField>CRM_Infraestructura__c.Capacidade__c</summarizedField>
    <summaryFilterItems>
        <field>CRM_Infraestructura__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>A</value>
    </summaryFilterItems>
    <summaryForeignKey>CRM_Infraestructura__c.CRM_Multiplicador__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>