Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/CRM_BRMX__c.field-meta.xml
<CustomField>
    <fullName>CRM_BRMX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o multiplicador cadastrou o CRM ou não</description>
    <label>CRM</label>
    <type>Checkbox</type>
</CustomField>