Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CRM Multiplicador</relationshipLabel>
    <relationshipName>CRM_Multiplicador</relationshipName>
    <type>Lookup</type>
</CustomField>