Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/CV_Agricultores__c.field-meta.xml
<CustomField>
    <fullName>CV_Agricultores__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Canal de Vendas (Agricultores)</description>
    <inlineHelpText>Canal de Vendas (Agricultores)</inlineHelpText>
    <label>CV Agricultores</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>