Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/CV_Cooperadores__c.field-meta.xml
<CustomField>
    <fullName>CV_Cooperadores__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Canal de Vendas(Cooperadores)</description>
    <inlineHelpText>Canal de Vendas(Cooperadores)</inlineHelpText>
    <label>CV Cooperadores</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>