Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/CV_Pool_de_Compras_Porc__c.field-meta.xml
<CustomField>
    <fullName>CV_Pool_de_Compras_Porc__c</fullName>
    <label>CV Pool de Compras %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>