Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/CV_Revendas__c.field-meta.xml
<CustomField>
    <fullName>CV_Revendas__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Canal de Vendas(Revendas)</description>
    <inlineHelpText>Canal de Vendas(Revendas)</inlineHelpText>
    <label>CV Revendas</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>