Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/CV_Revendas_Porc__c.field-meta.xml
<CustomField>
    <fullName>CV_Revendas_Porc__c</fullName>
    <label>CV Revendas %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>