Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/CV_Total__c.field-meta.xml
<CustomField>
    <fullName>CV_Total__c</fullName>
    <formula>CV_Agricultores__c + CV_Cooperadores__c + CV_Corretoras__c + CV_Multiplicadores__c + CV_Pool_de_Compras__c + CV_Revendas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CV Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>