Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/DS_Categoria__c.field-meta.xml
<CustomField>
    <fullName>DS_Categoria__c</fullName>
    <description>Porcentaje que corresponde según Categoria</description>
    <formula>IF(AND(DS_Superou_Meta__c=true,DS_Reclam_de_prec__c=0,DS_Manual_da_marca__c=true),
(IF(DS_Participacao_dia_campo_realizado__c &gt;= DS_Participacao_dia_de_campo_meta__c, 0.1, 0) + IF(DS_Areas_para_ensaios__c=true, 0.1, 0) + IF(DS_Palestras_Realizado__c &gt;= DS_Palestras_Meta__c, 0.2, 0) + IF(DS_Identifica_o_de_beiras_de_rodovia__c &gt;= DS_Emplacamentos_Meta__c, 0.3, 0) + IF(DS_LXL_Realizado__c &gt;= DS_LXL_Meta__c, 0.3, 0)) * (IF(CONTAINS(Region_Comercial_Copia__c,&quot;REGION&quot;), IF(DSoma_de_Sem_Comercializada__c &gt; 60000, 0.25, IF(DSoma_de_Sem_Comercializada__c &gt; 45000, 0.20, IF(DSoma_de_Sem_Comercializada__c &gt; 30000, 0.15, 0))), IF(DSoma_de_Sem_Comercializada__c &gt; 250000, 0.25, IF(DSoma_de_Sem_Comercializada__c &gt; 200000, 0.20, IF(DSoma_de_Sem_Comercializada__c &gt; 15000, 0.15, 0)))))
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Porcentaje que corresponde según Categoria</inlineHelpText>
    <label>%Desconto DSEM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>