Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/DS_Categoria_MKT__c.field-meta.xml
<CustomField>
    <fullName>DS_Categoria_MKT__c</fullName>
    <label>%Desconto DSEM MKT</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>