Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/DS_LXL_Realizado__c.field-meta.xml
<CustomField>
    <fullName>DS_LXL_Realizado__c</fullName>
    <label>Realizado LxL DSEM</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>