Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/DS_Participaca_dias_de_campo__c.field-meta.xml
<CustomField>
    <fullName>DS_Participaca_dias_de_campo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Dia de Campo Sem Custo</label>
    <type>Checkbox</type>
</CustomField>