Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/DS_porc_Meta_a_Alcanzar__c.field-meta.xml
<CustomField>
    <fullName>DS_porc_Meta_a_Alcanzar__c</fullName>
    <label>% Meta a Alcanzar DSEM</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>