Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/DSoma_de_Sem_Comercializada__c.field-meta.xml
<CustomField>
    <fullName>DSoma_de_Sem_Comercializada__c</fullName>
    <description>Suma del campo semilla comercializada para todas variedades (INTACTA) informadas en el anexo III y IV que está con el status aprobado</description>
    <inlineHelpText>Suma del campo semilla comercializada para todas variedades (INTACTA) informadas en el anexo III y IV que está con el status aprobado</inlineHelpText>
    <label>Vendas DSEM</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>