Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Incidencia_para_Votar__c.field-meta.xml
<CustomField>
    <fullName>Incidencia_para_Votar__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Incidência% a votar em preço e volume de vendas da semente</description>
    <inlineHelpText>Incidência% a votar em preço e volume de vendas da semente</inlineHelpText>
    <label>% Incidência para Votar</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>