Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/NEOG_Desconto_Obj_Gen_Dem__c.field-meta.xml
<CustomField>
    <fullName>NEOG_Desconto_Obj_Gen_Dem__c</fullName>
    <formula>IF((NEOG_Pontos_Obj_Gen_Dem__c / NG_Soma_de_Sem_Comercializada__c) &gt; 2, 2, (NEOG_Pontos_Obj_Gen_Dem__c / NG_Soma_de_Sem_Comercializada__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NEOG Desconto Obj Gen Dem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>