Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/NG_Categoria_resultante__c.field-meta.xml
<CustomField>
    <fullName>NG_Categoria_resultante__c</fullName>
    <formula>IF(OR(ISNULL(NG_Soma_de_Sem_Comercializada__c),(NG_Soma_de_Sem_Comercializada__c / NG_Soma_de_Meta__c) &lt; 0.65), &apos;STANDARD&apos;, IF((NG_Soma_de_Sem_Comercializada__c / NG_Soma_de_Meta__c) &lt;= 0.8, &apos;PLUS&apos;, &apos;PREMIUM&apos;))</formula>
    <label>Categoria de cliente NEOG</label>
    <type>Text</type>
</CustomField>