Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/NG_LXL_Realizado_Colhido__c.field-meta.xml
<CustomField>
    <fullName>NG_LXL_Realizado_Colhido__c</fullName>
    <label>Realizado LxL Colhido NEOG</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>